Save books in local storage

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   <section id="book-cont">
 
   </section>
-  <form id="form">
+  <form action="" id = "form">
     <div>
-      <input type="text" id="title" placeholder="Title">
+      <input type="text" id="title" placeholder="Title" required>
     </div>
     <div>
-      <input type="text" id="author" placeholder="Author">
+      <input type="text" id="author" placeholder="Author" required>
     </div>
     <div>
       <input type="submit" id="add-btn" title="Add">
     </div>
   </form>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
