Add HTML for the contac section

--- a/index.html
+++ b/index.html
@@ -12,23 +12,36 @@
 <body>
   <div class="container">
     <h1>All awesome books</h1>
-  <section id="book-cont">
+    <section id="book-cont">
 
-  </section>
-  <hr class="hr-tag"/>
-  <form action="" id="form">
-    <h2 class="form-title">Add a new book</h2>
-    <div>
-      <input type="text" id="title" placeholder="Title" class="form-element" required>
+    </section>
+    <hr class="hr-tag"/>
+    <form action="" id="form">
+      <h2 class="form-title">Add a new book</h2>
+      <div>
+        <input type="text" id="title" placeholder="Title" class="form-element" required>
+      </div>
+      <div>
+        <input type="text" id="author" placeholder="Author" class="form-element" required>
+      </div>
+      <div>
+        <input type="submit" id="add-btn" value="Add"/>
+      </div>
+    </form>
+    <section>
+      <h2 class="form-title">Contact information</h2>
+      <p>Do have any questions or you, just want to say "Hello"?</p>
+      <p>You can reach out to us!</p>
+      <ul>
+        <li>Our e-mail: mail@mail.com</li>
+        <li>Our phone number: 00435486534422</li>
+        <li>Our address: Streetname 22, 84503 City, Country</li>
+      </ul>
+    </section>
+    <footer>
+      <p>Copyright (c) SomeBusiness 2022</p>
+    </footer>
     </div>
-    <div>
-      <input type="text" id="author" placeholder="Author" class="form-element" required>
-    </div>
-    <div>
-      <input type="submit" id="add-btn" value="Add"/>
-    </div>
-  </form>
-  </div>
 
   <script src="js/main.js"></script>
 </body>
