Create navigation bar

--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 
 <body>
   <div class="container">
-    <h1>All awesome books</h1>
-    <section id="book-cont">
+    <header class="header">
+      <h2>Awesome books</h2>
+      <ul class="header-ul">
+        <li class="header-list"><a href="#" class="header-link">List</a> <hr class="menu-separator"></li>
+        <li class="header-list"><a href="#" class="header-link">Add new</a><hr class="menu-separator"></li>
+        <li class="header-list"><a href="#" class="header-link">Contact</a></li>
+      </ul>
+    </header>
+    <h4 class="date">March 19th 2021, 9:25:32 am</h4>
 
+    
+    <section id="book-cont">
+      <h1>All awesome books</h1>
     </section>
     <hr class="hr-tag"/>
     <form action="" id="form">
