Add date formatter

--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
     <header class="header">
       <h2>Awesome books</h2>
       <ul class="header-ul">
-        <li class="header-list"><a id="list-link" href="#" class="header-link">List</a> <hr class="menu-separator"></li>
-        <li class="header-list"><a id="add-link" href="#" class="header-link">Add new</a><hr class="menu-separator"></li>
+        <li class="header-list"><a id="list-link" href="#" class="header-link">List</a>
+          <hr class="menu-separator">
+        </li>
+        <li class="header-list"><a id="add-link" href="#" class="header-link">Add new</a>
+          <hr class="menu-separator">
+        </li>
         <li class="header-list"><a id="contact-link" href="#" class="header-link">Contact</a></li>
       </ul>
     </header>
-    <h4 class="date">March 19th 2021, 9:25:32 am</h4>
+    <h4 class="date" id="date">March 19th 2021, 9:25:32 am</h4>
 
-    
+
     <section id="book-cont">
       <h1>All awesome books</h1>
     </section>
-    
+
     <form action="" id="form" class="hidden">
       <h2 class="form-title">Add a new book</h2>
       <div>
@@ -35,7 +39,7 @@
         <input type="text" id="author" placeholder="Author" class="form-element" required>
       </div>
       <div>
-        <input type="submit" id="add-btn" value="Add"/>
+        <input type="submit" id="add-btn" value="Add" />
       </div>
     </form>
     <section id="contact" class="hidden">
@@ -51,7 +55,7 @@
     <footer>
       <p>Copyright (c) SomeBusiness 2022</p>
     </footer>
-    </div>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
